[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podmix"
version = "0.1.0"
description = "Podcast voice + BGM + outro auto-mixer CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydub>=0.25",
    "pyaudioop>=0.2.1; python_version >= '3.13'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
podmix = "podmix.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
